fixed text alignment

--- a/beta/www/css/style.css
+++ b/beta/www/css/style.css
@@ -64,7 +64,8 @@ a {
     width: 33%;
     padding: 1.3%;
     display: inline-block;
-    vertical-align: top; }
+    vertical-align: top;
+    text-align: left; }
   .grid-container section, .extras section {
     width: 100%;
     text-align: center;
@@ -100,8 +101,7 @@ a {
     overflow-x: hidden; }
     .grid-container article, .extras article {
       display: block;
-      width: 100%;
-      text-align: left; }
+      width: 100%; }
     .grid-container .grid, .extras .grid {
       flex-direction: row;
       -webkit-flex-direction: row;
